2013-03-14 Tsi YANG  <tsi@in-cite.net>
	* Feature: Added tx_icsodappstore_month_logs TCA
	* Feature: Added locallang key fr version

2012-09-20 Tsi YANG  <tsi@in-cite.net>
	* Release 1.1.3

2012-09-13 Aurelien GRAYO <aurelien@in-cite.net>
	* Feature: Added field label.

2012-09-13 Aurelien GRAYO <aurelien@in-cite.net>
	* Feature: Wrapped sorts into span tag and associated sorts label.

2012-06-21 Aurelien GRAYO <aurelien@in-cite.net>
	* Change extension owner to Plan.Net
	* Publication to the TER
	* Version changed to 1.1.2

2012-04-25 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Add pagebrowse dependency
	* Version changed to 1.1.1

2012-04-24 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Replace t3lib_div::fixed_lgd by tslib_cObj::crop, t3lib_div::fixed_lgd is not compatible with typo3 4.6
	* Version changed to 1.1.0

2012-04-17 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Add details view subparts: DESCRIPTION_SUBPART and LINK_SUBPART, if description field is empty, DESCRIPTION_SUBPART is removed, if link field is empty, LINK_SUBPART is removed

2012-03-28 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Add view list hook
	* Use pagebrowse extension to generate list pagination if configuration actived
	* Add possibility to have single view page different of list view page

2012-03-23 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Version changed to 1.0.4

2012-03-23 Tsi YANG  <tsi@in-cite.net>
	* Documentation: Added stats API

2012-03-23 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Fix: update autoload

2012-03-22 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Version changed to 1.0.3
	* Depends typo3 4.3 (scheduler)
	* Fix: add function to control piVars data format (credits go to Smile who repport this issue).  
	* Fix: add forgotten htmlspecialchars (credits go to Smile who repport this issue). 
	* Fix: Move "screenshot" text to locallang (credits go to Smile who repport this issue). 