@@ -1,0 +1,118 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3DataStructure>
+	<meta>
+       <langDisable>1</langDisable>
+	</meta>
+	<sheets>
+		<main>
+			<ROOT>
+				<TCEforms>
+					<sheetTitle>LLL:EXT:ics_od_appstore/locallang_flexform_pi4.xml:general</sheetTitle>
+				</TCEforms>
+				<el>
+					<template>
+						<TCEforms>
+							<label>LLL:EXT:ics_od_appstore/locallang_flexform_pi4.xml:template</label>
+						   <config>
+								<type>input</type>
+								<size>30</size>
+								<max>255</max>
+								<eval>trim</eval>
+								<wizards type="array">
+									<_PADDING>2</_PADDING>
+									<link type="array">
+										<type>popup</type>
+										<title>Link</title>
+										<icon>link_popup.gif</icon>
+										<script>browse_links.php?mode=wizard</script>
+										<params type="array">
+											<blindLinkOptions>page,url,mail,spec</blindLinkOptions>
+											<allowedExtensions>htm,html,tmpl,tpl</allowedExtensions>
+										</params>
+										<JSopenParams>height=300,width=500,status=0,menubar=0,scrollbars=1</JSopenParams>
+									</link>
+								</wizards>
+							</config>
+						</TCEforms>
+					</template>
+					<applications>
+						<TCEforms>
+							<label>LLL:EXT:ics_od_appstore/locallang_flexform_pi4.xml:applications</label>
+							<config>
+								<type>select</type>
+								<foreign_table>tx_icsodappstore_applications</foreign_table>
+								<foreign_table_where>AND tx_icsodappstore_applications.lock_publication=0 AND tx_icsodappstore_applications.publish=1</foreign_table_where>
+								<size>10</size>
+								<minitems>0</minitems>
+								<maxitems>99</maxitems>
+							</config>
+						</TCEforms>
+					</applications>
+				</el>
+			</ROOT>
+		</main>
+		<sortAndFilter>
+			<ROOT>
+				<TCEforms>
+					<sheetTitle>LLL:EXT:ics_od_appstore/locallang_flexform_pi4.xml:sortAndFilter</sheetTitle>
+				</TCEforms>
+				<el>
+					<sortAvailable>
+						<TCEforms>
+							<label>LLL:EXT:ics_od_appstore/locallang_flexform_pi4.xml:sortAvailable</label>
+							<config>
+								<type>select</type>
+								<items type="array">
+									<numIndex index="0" type="array">
+										<numIndex index="0">LLL:EXT:ics_od_appstore/locallang_flexform_pi4.xml:sort_release_date</numIndex>
+										<numIndex index="1">release_date</numIndex>
+									</numIndex>
+									<numIndex index="1" type="array">
+										<numIndex index="0">LLL:EXT:ics_od_appstore/locallang_flexform_pi4.xml:sort_countcall</numIndex>
+										<numIndex index="1">countcall</numIndex>
+									</numIndex>
+									<numIndex index="2" type="array">
+										<numIndex index="0">LLL:EXT:ics_od_appstore/locallang_flexform_pi4.xml:sort_favorite</numIndex>
+										<numIndex index="1">favorite</numIndex>
+									</numIndex>
+								</items>
+								<size>3</size>
+								<minitems>0</minitems>
+								<maxitems>3</maxitems>
+							</config>
+						</TCEforms>
+					</sortAvailable>
+					<sortDefault>
+						<TCEforms>
+							<label>LLL:EXT:ics_od_appstore/locallang_flexform_pi4.xml:sortOrder</label>
+							<config>
+								<type>select</type>
+								<items type="array">
+									<numIndex index="0" type="array">
+										<numIndex index="0"></numIndex>
+										<numIndex index="1"></numIndex>
+									</numIndex>
+									<numIndex index="1" type="array">
+										<numIndex index="0">LLL:EXT:ics_od_appstore/locallang_flexform_pi4.xml:sort_release_date</numIndex>
+										<numIndex index="1">release_date</numIndex>
+									</numIndex>
+									<numIndex index="2" type="array">
+										<numIndex index="0">LLL:EXT:ics_od_appstore/locallang_flexform_pi4.xml:sort_countcall</numIndex>
+										<numIndex index="1">countcall</numIndex>
+									</numIndex>
+									<numIndex index="3" type="array">
+										<numIndex index="0">LLL:EXT:ics_od_appstore/locallang_flexform_pi4.xml:sort_favorite</numIndex>
+										<numIndex index="1">favorite</numIndex>
+									</numIndex>
+								</items>
+								<size>1</size>
+								<minitems>1</minitems>
+								<maxitems>1</maxitems>
+							</config>
+						</TCEforms>
+					</sortDefault>
+				</el>
+			</ROOT>
+		</sortAndFilter>
+	</sheets>
+</T3DataStructure>
