@@ -1,0 +1,33 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>flexform</type>
+		<description>Language labels for plugin flexform &quot;tx_icsodappstore_pi4&quot;</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="general">General</label>
+			<label index="template">Template</label>
+			<label index="applications">Applications</label>
+			<label index="sortAndFilter">Sort and filter</label>
+			<label index="sortAvailable">Sort available</label>
+			<label index="sort_release_date">Release date</label>
+			<label index="sort_countcall">Count call</label>
+			<label index="sort_favorite">Favorite</label>
+			<label index="sortOrder">Sort order</label>
+			<label index="sortDefault">Order (default)</label>
+		</languageKey>
+		<languageKey index="fr" type="array">
+			<label index="general">Général</label>
+			<label index="template">Template</label>
+			<label index="applications">Applications</label>
+			<label index="sortAndFilter">Tri et filtre</label>
+			<label index="sortAvailable">Tri disponible</label>
+			<label index="sort_release_date">Date de publication</label>
+			<label index="sort_countcall">Compteur d'appels</label>
+			<label index="sort_favorite">Applications préférées</label>
+			<label index="sortOrder">Ordre de tri</label>
+			<label index="sortDefault">Tri par défaut</label>
+		</languageKey>
+	</data>
+</T3locallang>
